apps/llama-cpp/qwen3-8-27b/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen3-8-27b
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: qwen3-8-27b
    app.kubernetes.io/name: qwen3-8-27b
